Add review_requested, reviewed and merged props to listed PRs
